# vscode_agent_sandbox

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
agent/: README.md  agent.py  mcp_server.py
tmp_output/: README.md  setup.py
tmp_output/mcp_generated/: __init__.py  main.py
tmp_output/testpkg/: __init__.py  main.py
tmp_output/tests/: test_mcp_generated.py  test_testpkg.py
