[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vscode-agent-sandbox"
version = "0.0.1"
description = "Minimal LLM-capable code generation agent (example)"
authors = [ { name = "natesgituser" } ]
dependencies = []

[project.scripts]
llm-agent = "agent.agent:main"
